c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/return_array.c
/* In our implementation this is a parse error; in others it could be a type error. */
int foo(void)[3];